# Speech-Bandwidth-Expansion

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: spectrograms.ipynb
sbe_system/: __init__.py
sbe_system/SpeechBandwidthExtension/: sbe.py
sbe_system/sbe_encoder/: SBEEncoder.py
sbe_system/utils/: features.py
speech_bandwidth_expansion/: __init__.py  main.py
speech_bandwidth_expansion/System/: sbe.py
speech_bandwidth_expansion/sbe_system/: __init__.py
speech_bandwidth_expansion/sbe_system/SpeechBandwidthExtension/: sbe.py
speech_bandwidth_expansion/sbe_system/utils/: features.py
