[tool.poetry]
name = "speech-bandwidth-expansion"
version = "0.1.0"
description = "Artificial Bandwidth Expansion for Narrow-Band speech"
authors = ["George Manos <george.manos01@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "speech_bandwidth_expansion"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
