[tool.poetry]
name = "speech-bandwidth-expansion"
version = "0.1.0"
description = "Artificial Bandwidth Expansion for Narrowband speech system, as described by the patent of D. Malah (see readme)"
authors = ["George Manos <watchmedoctor@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "speech_bandwidth_expansion"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
librosa = "^0.10.0.post2"
sounddevice = "^0.4.6"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
